evaluation/test_suite/negative/ub61/2.c
#include <stdio.h>

int main()
{
    const int x = 1;
    void* p = (void*)&x;
    int* q = (int*)p;
    printf("%d\n", *q);
}
